Port back test to java 8